kubernetes/apps/database/rabbitmq/cluster/networkpolicy.yaml
# Allow shared RabbitMQ clients and RabbitMQ operators.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rabbitmq-allow-clients
  namespace: database
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: rabbitmq
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: services
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: tools
    ports:
    - port: 5672
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: rabbitmq-system
    ports:
    - port: 15672
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: observability
      podSelector:
        matchLabels:
          app.kubernetes.io/name: prometheus
    ports:
    - port: 15692
      protocol: TCP
